--- a/sample-android-app/src/main/res/values/strings.xml
+++ b/sample-android-app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">CadabraTestApp</string>
     <string name="title_activity_main">Cadabra Main Activity</string>
+    <string name="greeting_title_a">Hello my friend!</string>
+    <string name="greeting_title_b">Hello world</string>
 </resources>
