--- a/cadabra-android/src/test/res/values/strings.xml
+++ b/cadabra-android/src/test/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="greeting_title_a">test A</string>
-    <string name="greeting_title_b">test B</string>
+    <string name="test_a">test A</string>
+    <string name="test_b">test B</string>
 </resources>
