--- a/sample-android-app/src/main/res/values/strings.xml
+++ b/sample-android-app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_activity_main">Cadabra Main Activity</string>
     <string name="greeting_title_a">Hello my friend!</string>
     <string name="greeting_title_b">Hello world</string>
+    <string name="remote_greeting_f1">Hello from Firebase</string>
+    <string name="remote_greeting_f2">Welcome to remote world</string>
 </resources>
